[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox-google-places-api"
version = "0.1.0"
description = "**ðŸ“ Sandbox for experimenting with Google Places API and Claude tool calling**"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
